# RightTyper

./: .gitignore  CLAUDE.md  Makefile  README.md  RightTyper-workflow.md  SECURITY.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: codeql.yml  release.yml  smoketests.yml  tests.yml
righttyper/: .righttyper.py.swp  __main__.py  annotate_function_transformer.py  annotation.py  annotation_coverage.py  ast_instrument.py  atomic.py  construct_import_transformer.py  generalize.py  generate_stubs.py  get_import_details.py  insert_typing_import_transformer.py  loader.py  logger.py  observations.py  options.py  pytest.py  random_dict.py  recorder.py  replace_dicts.py  righttyper.py  righttyper_alarm.py  righttyper_process.py  righttyper_runtime.py  righttyper_shapes.py  righttyper_tool.py  righttyper_types.py  righttyper_utils.py  self_profiling.cpp  shapeshifter.py  traverse.cpp  type_from_mypy.py  type_from_stub.py  type_id.py  type_transformers.py  typeinfo.py  typemap.py  typeshed.py  unified_transformer.py  variable_binding.py  (+2 more)
righttyper/util/: classify-mypy-errors.py
tests/: conftest.py  test_ast_instrument.py  test_generalize.py  test_import_details.py  test_integration.py  test_issues.py  test_righttyper_utils.py  test_stubs.py  test_tool.py  test_transformer.py  test_type_transformers.py  test_typeinfo.py  test_typeshed.py  test_typing.py  test_variable_binding.py  test_variable_capture.py  test_variables.py
